--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ h1{
 .navbar-container .nav-link:hover{
     color: #fff;
 }
+.nav-link:hover::after {
+    width: 100%;
+    transition: width 0.3s;
+}
 .sections{
     overflow-x: hidden; 
     width: 100vw;
@@ -255,9 +259,15 @@ h1{
     margin: 20px;
     overflow: hidden;
     transition: transform 0.3s ease;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 
 }
-
+.card.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
 .article-card:hover {
     transform: translateY(-10px);
 }
@@ -485,4 +495,64 @@ footer {
     width: 100%;
     margin-top: 15px;
 }
+.heading-title{
+    text-align: center;
+    font-size: 2.7rem;
+    margin-top: 20px;
 
+}
+.artwork-section p{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-left: 120px;
+}
+.art-piece img{
+    height: 100%;
+    width: auto;
+    object-fit: cover;
+}
+.art-piece:hover .galary-layer {
+    opacity: 1;
+
+}
+.galary-layer{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 5;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.8s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.gallery-layer p {
+    margin: 10px;
+    width: 85%;
+    text-align: center;
+}
+
+.button-link span {
+        z-index: 1;
+        position: relative;
+        color: black;
+    }
+.art-piece {
+        width: auto;
+        max-width: 600px;
+        border-radius: 15px;
+        height: 500px;
+        overflow: hidden;
+        position: relative;
+        color: white;
+        margin: 20px 10px;
+        display: flex;
+        justify-content: center;
+        box-shadow: rgb(0, 0, 0) 0px 3px 8px 1px;
+    }
